Jobs by Location

--- a/index.html
+++ b/index.html
@@ -391,9 +391,9 @@
                   border-radius: 10px;
                 ">
               <div class="hiring-companies-based-company-name">Dubai</div>
-              <div class="hiring-companies-based-review-info">
+              <!-- <div class="hiring-companies-based-review-info">
                 4.0 ⭐ | 23.7k+ reviews
-              </div>
+              </div> -->
             </div>
             <!-- <p class="hiring-companies-based-review-data">
                 Global leader in technology services
@@ -412,9 +412,9 @@
                   border-radius: 10px;
                 ">
               <div class="hiring-companies-based-company-name">America</div>
-              <div class="hiring-companies-based-review-info">
+              <!-- <div class="hiring-companies-based-review-info">
                 3.8 ⭐ | 56.7k+ reviews
-              </div>
+              </div> -->
             </div>
             <!-- <p class="hiring-companies-based-review-data">
                 Leading ITES company <br />
@@ -434,9 +434,9 @@
                   border-radius: 10px;
                 ">
               <div class="hiring-companies-based-company-name">Canada</div>
-              <div class="hiring-companies-based-review-info">
+              <!-- <div class="hiring-companies-based-review-info">
                 4.1 ⭐ | 5.7k+ reviews
-              </div>
+              </div> -->
             </div>
             <!-- <p class="hiring-companies-based-review-data">
                 FIS is hiring 3 to 10 yrs <br />
@@ -456,9 +456,9 @@
                   border-radius: 10px;
                 ">
               <div class="hiring-companies-based-company-name">FIS</div>
-              <div class="hiring-companies-based-review-info">
+              <!-- <div class="hiring-companies-based-review-info">
                 3.5 ⭐ | 83.7k+ reviews
-              </div>
+              </div> -->
             </div>
             <!-- <p class="hiring-companies-based-review-data">
                 Exploring challenging and <br />
@@ -480,9 +480,9 @@
               <div class="hiring-companies-based-company-name">
                 Tata Consultancy Services
               </div>
-              <div class="hiring-companies-based-review-info">
+              <!-- <div class="hiring-companies-based-review-info">
                 3.5 ⭐ | 83.7k+ reviews
-              </div>
+              </div> -->
             </div>
             <!-- <p class="hiring-companies-based-review-data">
                 Exploring challenging and <br />
@@ -504,9 +504,9 @@
               <div class="hiring-companies-based-company-name">
                 Tata Consultancy Services
               </div>
-              <div class="hiring-companies-based-review-info">
+              <!-- <div class="hiring-companies-based-review-info">
                 3.5 ⭐ | 83.7k+ reviews
-              </div>
+              </div> -->
             </div>
             <!-- <p class="hiring-companies-based-review-data">
                 Exploring challenging and <br />
@@ -664,10 +664,10 @@
         <div class="hiring-companies-based-scroll-track">
           <div class="hiring-companies-based-scroll-thumb" id="scrollThumb"></div>
         </div>
-        <div class=" d-flex justify-content-center " style="margin: 1rem;">
+        <!-- <div class=" d-flex justify-content-center " style="margin: 1rem;">
           <button class="btn mt-3 ">View All Companies</button>
 
-        </div>
+        </div> -->
       </div>
     </div>
 
@@ -675,9 +675,9 @@
 
     <div class="container mt-5">
       <h2 class="text-center">Latest jobs on Workisy</h2>
-      <div class="d-flex justify-content-center align-items-center mt-4">
+      <!-- <div class="d-flex justify-content-center align-items-center mt-4">
         <span class="popular-categories">Popular categories</span>
-      </div>
+      </div> -->
       <div class="d-flex justify-content-center align-items-center mt-4">
         <div id="category-buttons-internships">
           <!-- Category buttons for internships will be inserted here dynamically -->
