--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <div class="worksiy-home-search-container">
         <div class="worksiy-home-search-row align-items-center justify-content-center">
           <!-- Heading Section -->
-          <div class="worksiy-home-search-col-md-4 worksiy-home-search-heading-text">
-            <h3>Over 7,00,000+ <br />jobs to explore</h3>
+          <div >
+            <h3 class="over-text-container">Over 7,00,000+ <br />jobs to explore</h3>
           </div>
 
           <!-- Search Bar Section -->
@@ -298,10 +298,10 @@
       </div>
     </div>
 
-    <!-- Latest jobs  Workisy start--------------------------------------------------------- -->
+    <!-- -----------Latest jobs  Workisy start--------------------------------------------------------- -->
 
     <div class="container mt-5">
-      <h2 class="text-center" style="color: #1f3e72">
+      <h2 class="text-center latest-job-part" >
         Latest jobs on Workisy
       </h2>
 
@@ -316,11 +316,11 @@
           <button class="btn category-button">Sales</button>
         </div>
       </div>
-      <div class="carousel-navigation-latest-job">
-        <button class="latest-job-carousel-btn prev" onclick="scrollCarousel('left')">&lt;</button>
-        <button class="latest-job-carousel-btn next" onclick="scrollCarousel('right')">&gt;</button>
+      <div class="carousel-navigation-latest-job mb-3">
+        <button class="latest-job-carousel-btn prev" onclick="scrollCarousel('left','latest-job-on-workisy')">&lt;</button>
+        <button class="latest-job-carousel-btn next" onclick="scrollCarousel('right','latest-job-on-workisy')">&gt;</button>
       </div>
-      <div class="scroll-container mt-4" id="cards-container-latest-job-on-workisy">
+      <div class="scroll-container " id="cards-container-latest-job-on-workisy">
         <!-- card-1 -->
         <div class="card">
           <div>
@@ -650,13 +650,13 @@
     <!-- ----------------------------Work From Home----------------------------------------------- -->
 
     <div class="container mt-5">
-      <h2 class="text-center">Work From Home</h2>
-      <div class="carousel-navigation-latest-job">
+      <h2 class="text-center work-from-part">Work From Home</h2>
+      <div class="carousel-navigation-latest-job mb-3">
         <button class="latest-job-carousel-btn prev" onclick="scrollCarousel('left', 'work-from-home')">&lt;</button>
         <button class="latest-job-carousel-btn next" onclick="scrollCarousel('right', 'work-from-home')">&gt;</button>
       </div>
 
-      <div class="mt-4 scroll-container" id="cards-container-work-from-home">
+      <div class="scroll-container" id="cards-container-work-from-home">
         <!-- card-1 -->
         <div class="card">
           <div>
@@ -986,12 +986,12 @@
     <!-- ----------------------part times-------------------------- -->
 
     <div class="container mt-5">
-      <h2 class="text-center">Part Time</h2>
-      <div class="carousel-navigation-latest-job">
-        <button class="latest-job-carousel-btn prev" onclick="scrollCarousel('left', 'part-time')">&lt;</button>
-        <button class="latest-job-carousel-btn next" onclick="scrollCarousel('right', 'part-time')">&gt;</button>
+      <h2  class="text-center part-time-part">Part Time</h2>
+      <div class="carousel-navigation-latest-job mb-3">
+        <button class="latest-job-carousel-btn prev" onclick="scrollCarousel('left', 'part-times')">&lt;</button>
+        <button class="latest-job-carousel-btn next" onclick="scrollCarousel('right', 'part-times')">&gt;</button>
       </div>
-      <div class="mt-4 scroll-container" id="cards-container-part-times">
+      <div class="scroll-container" id="cards-container-part-times">
         <!-- card-1 -->
         <div class="card">
           <div>
@@ -1321,12 +1321,12 @@
     <!-- -------------------------full times------------------------------- -->
 
     <div class="container mt-5">
-      <h2 class="text-center">Full Time</h2>
-      <div class="carousel-navigation-latest-job">
-        <button class="latest-job-carousel-btn prev" onclick="scrollCarousel('left')">&lt;</button>
-        <button class="latest-job-carousel-btn next" onclick="scrollCarousel('right')">&gt;</button>
+      <h2  class="text-center full-time-part">Full Time</h2>
+      <div class="carousel-navigation-latest-job mb-3">
+        <button class="latest-job-carousel-btn prev" onclick="scrollCarousel('left','full-times')">&lt;</button>
+        <button class="latest-job-carousel-btn next" onclick="scrollCarousel('right','full-times')">&gt;</button>
       </div>
-      <div class="mt-4 scroll-container" id="cards-container-full-times">
+      <div class="scroll-container" id="cards-container-full-times">
         <!-- card-1 -->
         <div class="card">
           <div>
@@ -1656,12 +1656,12 @@
     <!-------------------------------------- freelnace ----------------------------------->
 
     <div class="container mt-5">
-      <h2 class="text-center">Freelance</h2>
-      <div class="carousel-navigation-latest-job">
-        <button class="latest-job-carousel-btn prev" onclick="scrollCarousel('left')">&lt;</button>
-        <button class="latest-job-carousel-btn next" onclick="scrollCarousel('right')">&gt;</button>
+      <h2  class="text-center freelance-part">Freelance</h2>
+      <div class="carousel-navigation-latest-job mb-3">
+        <button class="latest-job-carousel-btn prev" onclick="scrollCarousel('left','freelances')">&lt;</button>
+        <button class="latest-job-carousel-btn next" onclick="scrollCarousel('right','freelances')">&gt;</button>
       </div>
-      <div class="mt-4 scroll-container" id="cards-container-freelances">
+      <div class=" scroll-container" id="cards-container-freelances">
         <!-- card-1 -->
         <div class="card">
           <div>
@@ -1990,7 +1990,7 @@
 
     <!-- Find Job Vacancies By---------------------------------------------------------------------- -->
     <div class="container mt-5">
-      <h5 class="heading-job-vacancies">Find Job Vacancies By</h5>
+      <h2 class="heading-job-vacancies">Find Job Vacancies By</h2>
 
       <ul class="nav nav-tabs" id="jobVacancyTabs" role="tablist">
         <li class="nav-item" role="presentation">
@@ -2074,12 +2074,12 @@
 
       <div class="hiring-companies-based-custom-scroll-container">
         <div class="text-center">
-          <p style="font-size: 1.5rem; font-weight: 600 ">Jobs by Location</p>
+          <p class="job-by-location-header" >Jobs by Location</p>
         </div>
         <!-- Navigation Arrows -->
         <div class="carousel-navigation">
-          <button class="carousel-btn prev" onclick="scrollCarousel('left')">&lt;</button>
-          <button class="carousel-btn next" onclick="scrollCarousel('right')">&gt;</button>
+          <button class="carousel-btn prev" onclick="scrollCarouselLocation('left')">&lt;</button>
+          <button class="carousel-btn next" onclick="scrollCarouselLocation('right')">&gt;</button>
         </div>
 
         <div class="hiring-companies-based-carousel-container" id="carouselContainer">
@@ -2266,14 +2266,10 @@
         <div class="hiring-companies-based-scroll-track">
           <div class="hiring-companies-based-scroll-thumb" id="scrollThumb"></div>
         </div>
-        <!-- <div class=" d-flex justify-content-center " style="margin: 1rem;">
-          <button class="btn mt-3 ">View All Companies</button>
-
-        </div> -->
       </div>
     </div>
 
-    <!-- Wrapper for Premium Services Sections------------------------------------------------------ -->
+    <!-------------------For Candidate , For Employers------------------------------- -->
 
     <div class="container mt-5">
       <!-- Premium Services Section 1 -->
@@ -2371,28 +2367,28 @@
 
   <!-- ---------------------------------footer-1--------------------------------------------------------- -->
 
-  <div id="footer">
+  <div class="footer-1">
     <div class="footer-content">
       <div class="company">
-        <p>
+        <p class="footer-1-text">
           Workisy is a dependable B2B recruitment and talent acquisition partner
           dedicated to simplifying the hiring process for numerous businesses.
         </p>
       </div>
 
       <div class="company">
-        <h6>Useful links</h6>
+        <h6 class="footer-1-useful">Useful links</h6>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Find Jobs</a></li>
-          <li><a href="#">Faq's</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li class="footer-1-li"><a href="#">Home</a></li>
+          <li class="footer-1-li"><a href="#">Find Jobs</a></li>
+          <li class="footer-1-li"><a href="#">Faq's</a></li>
+          <li class="footer-1-li"><a href="#">About Us</a></li>
+          <li class="footer-1-li"><a href="#">Contact Us</a></li>
         </ul>
       </div>
 
       <div class="follow-us">
-        <h6>Follow us</h6>
+        <h6 class="footer-1-follow-us">Follow us</h6>
         <div class="social-icons">
           <button class="icon-btn facebook">
             <i class="fab fa-facebook-f"></i>
@@ -2412,7 +2408,7 @@
         </div>
       </div>
     </div>
-
+<hr>
     <div class="footer-bottom">
       <div class="footer-logo">
         <img src="assets/logo.png" alt="Logo" class="logo" />
